[package]
name = "ilattice3"
version = "0.1.0"
authors = ["<bonsairobo@gmail.com>"]
edition = "2018"

description = "Data types, structures, and algorithms for 3D integer lattices (voxels)"

[features]
default = []

vox = ["dot_vox"]
img = ["image"]

[dependencies]
bincode = "1.3"
fnv = "1.0"
enum-primitive-derive = "0.2"
indexmap = "1.5"
itertools = "0.9"
lz4 = "1.23"
num = "0.3"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }

compressible-map = { git = "https://github.com/bonsairobo/compressible-map" }

dot_vox = { version = "4.1", optional = true }
image = { version = "0.23", optional = true }
